k8s/consumer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-fiesta-consumer
  labels:
    app: solid-fiesta-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solid-fiesta-consumer
  template:
    metadata:
      labels:
        app: solid-fiesta-consumer
    spec:
      containers:
        - name: consumer
          image: hsmtkk/solid-fiesta:latest
          imagePullPolicy: Always
          command:
            - /usr/local/bin/consumer
          ports:
            - containerPort: 9123
          startupProbe:
            httpGet:
              path: /metrics
              port: 9123
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9123
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9123
