k8s/producer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-fiesta-producer
  labels:
    app: solid-fiesta-producer
  annotations:
    prometheus.io/scrape: true
    prometheus.io/path: /metrics
    prometheus.io/port: 9123
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solid-fiesta-producer
  template:
    metadata:
      labels:
        app: solid-fiesta-producer
    spec:
      containers:
        - name: producer
          image: hsmtkk/solid-fiesta:latest
          imagePullPolicy: Always
          command:
            - /usr/local/bin/producer
          ports:
            - containerPort: 9123
          startupProbe:
            httpGet:
              path: /metrics
              port: 9123
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9123
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9123
