k8s/loki.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-fiesta-loki
  labels:
    app: solid-fiesta-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-fiesta-loki
  template:
    metadata:
      labels:
        app: solid-fiesta-loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3100
          startupProbe:
            httpGet:
              path: /metrics
              port: 3100
          readinessProbe:
            httpGet:
              path: /metrics
              port: 3100
          livenessProbe:
            httpGet:
              path: /metrics
              port: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: solid-fiesta-loki
spec:
  type: ClusterIP
  selector:
    app: solid-fiesta-loki
  ports:
    - protocol: TCP
      port: 3100
