k8s/redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-fiesta-redis
  labels:
    app: solid-fiesta-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-fiesta-redis
  template:
    metadata:
      labels:
        app: solid-fiesta-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
          startupProbe:
            tcpSocket:
              port: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
          livenessProbe:
            tcpSocket:
              port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: solid-fiesta-redis
spec:
  type: ClusterIP
  selector:
    app: solid-fiesta-redis
  ports:
    - protocol: TCP
      port: 6379
