k8s/prometheus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-fiesta-prometheus
  labels:
    app: solid-fiesta-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-fiesta-prometheus
  template:
    metadata:
      labels:
        app: solid-fiesta-prometheus
    spec:
      serviceAccountName: solid-fiesta-prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          startupProbe:
            httpGet:
              path: /metrics
              port: 9090
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9090
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
      volumes:
        - name: config
          configMap:
            name: solid-fiesta-prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: solid-fiesta-prometheus
spec:
  type: ClusterIP
  selector:
    app: solid-fiesta-prometheus
  ports:
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solid-fiesta-prometheus
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solid-fiesta-prometheus
                port:
                  number: 9090
